--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <head></head>
   <body>
     <div id="app"></div>
-    <script src="src/main.js"></script>
+
+    <!--build:js-->
+    <script src="build/main.js"></script>
+    <!--endbuild-->
   </body>
 </html>
