--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <div id="app"></div>
 
     <!--build:js-->
-    <script src="build/main.js"></script>
+      <script src="src/main.js"></script>
     <!--endbuild-->
   </body>
 </html>
